examples/kubernetes/chaos-engeneering/chaos-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetlschaos
  namespace: chaos-testing
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
  routes:
    - match: Host(`chaos.<ENV-NAME>-user-<ENV-USER-ID>-01.<ENV-ANIMAL>.commandemy.training`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: chaos-dashboard
          port: 2333
